# TTS-Audio-Suite

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_backup_20250711_230106.md  COMFYUI_TEST_GUIDE.md  DEPENDENCY_TESTING_RESULTS.md  F5TTS_TESTING_GUIDE.md  GITHUB_COMMIT_MESSAGE_BILINGUAL.md  HIGGS_AUDIO_CACHE_BUG_ANALYSIS.md  HIGGS_AUDIO_ISSUE_138_FIX.md  LICENSE  PROJECT_INDEX.md  README.md  RVC_INTEGRATION_SUMMARY.md  SRT_IMPLEMENTATION.md  STREAMING_ARCHITECTURE.md  __init__.py  claude_settings_copy.json  current_requirements.txt  fix_reference_imports.py  fixed_issues.json  install.py  install_new.py  issues.json  mediapipe_python313_workaround.md  nodes.py  nodes_audio_recorder.py  path_test.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  sorted_packages.txt  test_config_fix.py  test_direct_config.py  test_gguf_fix.py  test_gguf_minimal.py  test_import.py  test_model_management.py  test_modelconfig.py  (+4 more)
.github/: FUNDING.yml
adapters/: __init__.py  chatterbox_adapter.py  f5tts_adapter.py
chatterbox/: __init__.py  audio_timing.py  srt_parser.py  tts.py  vc.py
chatterbox_srt/: __init__.py  audio_assembly.py  reporting.py  timing_engine.py
comfyui_env/: pyvenv.cfg
core/: Original OLD f5tts_edit_node.py  __init__.py  audio_analysis.py  audio_compositing.py  audio_compositing_modularized.py  audio_processing.py  character_parser.py  chatterbox_subprocess.py  f5tts_edit_cache.py  f5tts_edit_engine.py  f5tts_edit_engine_modularized.py  f5tts_model_manager.py  import_manager.py  language_model_mapper.py  model_manager.py  multilingual_engine.py  pause_tag_processor.py  text_chunking.py  voice_discovery.py
docs/: ADVANCED_TTS_TAG_EDITOR_NODE.md  AGENT_CAPABILITIES.md  AUDIO_ANALYZER_GUIDE.md  AUX_MODEL_LAYOUTS.md  AUX_MODEL_SOURCES.md  BUMP_SCRIPT_INSTRUCTIONS.md  CHARACTER_SWITCHING_GUIDE.md  CHATTERBOX_V2_SPECIAL_TOKENS.md  COMFYUI_MESSAGING_GUIDE.md  COSYVOICE3_TAGS_GUIDE.md  DEPENDENCY_MANAGEMENT_GUIDE.md  ENGINE_COMPARISON.md  F5TTS_IMPLEMENTATION_SUMMARY.md  F5TTS_INTEGRATION_SPECIFICATION.md  FEATURE_COMPARISON.md  FISH_AUDIO_S2_TAGS.md  HIGGS_AUDIO_V3_INLINE_TAGS.md  INLINE_EDIT_TAGS_USER_GUIDE.md  IndexTTS2_Emotion_Control_Guide.md  LANGUAGE_SUPPORT.md  MODEL_DOWNLOAD_SOURCES.md  MODEL_LAYOUTS.md  MOSS_LORA_GUIDE.md  MOSS_TRAINING_GUIDE.md  MOSS_TTS_PROMPT_FIELDS_GUIDE.md  MULTILINE_TTS_TAG_EDITOR_GUIDE.md  NEW_ENGINE_IMPLEMENTATION_GUIDE.md  OMNIVOICE_TAGS_GUIDE.md  PARAMETER_SWITCHING_GUIDE.md  SOUND_EFFECTS_GUIDE.md  SRT_IMPLEMENTATION.md  TEXT_CHUNKING_GUIDE.md  VERSION_UPDATE_GUIDE.md  VOCAL_REMOVAL_GUIDE.md  f5tts_integration_guide.py  qwen3_tts_optimizations.md  🌊_Audio_Wave_Analyzer-Complete_User_Guide.md
example_workflows/: Chatterbox SRT.json  Chatterbox SRT.json:Zone.Identifier  Chatterbox SRT.jsonZone.Identifier  Chatterbox integration.json  Fish Audio S2 integration.json  Higgs Audio v3 Integration.json  MOSS LoRA 🎓 Model Training.json  OmniVoice Engine Integration.json  Qwen3 integration + ASR.json  RVC 🎓 Model Training.json  Step Audio EditX Integration.json  Unified ✏️ ASR Transcribe + SRT Builder.json  Unified 🌩️ Sound Effects.json  Unified 🎨 Voice Designer.json  Unified 🔄 Voice Changer - RVC X ChatterBox.json  VibeVoice integration.json  Voice Cleaning - 🤐 Noise or Vocal Removal + 🤐 Voice Fixer.json  🌈 IndexTTS-2 integration.json  🎨 Step Audio EditX - Audio Editor + Inline Edit Tags.json  📺 Chatterbox SRT.json
ignore/: google_api_core_response.md
nodes/: __init__.py  audio_analyzer_node.py  audio_analyzer_options_node.py  audio_recorder_node.py  base_node.py  f5tts_base_node.py  f5tts_edit_node.py  f5tts_edit_node_modularized.py  f5tts_edit_node_old.py  f5tts_edit_node_working.py  f5tts_node.py  (+7 more)
(+653 files in other folders)
