[project]
name = "tts_audio_suite"
description = "TTS Audio Suite - Universal multi-engine TTS extension for ComfyUI with unified architecture supporting ChatterBox, Chatterbox Multilingual TTS (Official 23-Lang), F5-TTS, Higgs Audio 2, VibeVoice, and RVC engines. Features modular engine adapters, character voice management, comprehensive SRT subtitle support, and advanced audio processing capabilities."
version = "4.8.22"
license = {file = "LICENSE"}
dependencies = ["s3tokenizer>=0.1.7", "resemble-perth", "librosa", "scipy", "omegaconf", "accelerate", "transformers==4.46.3", "# Additional dependencies for SRT support and audio processing", "conformer>=0.3.2", "torch", "torchaudio", "numpy", "einops", "phonemizer", "g2p-en", "unidecode", "# Audio processing and timing dependencies", "soundfile", "resampy", "webrtcvad", "# Optional but recommended for better performance", "numba"]

[project.urls]
Repository = "https://github.com/diodiogod/TTS-Audio-Suite"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "diogod"
DisplayName = "TTS Audio Suite"
Icon = "https://raw.githubusercontent.com/diodiogod/TTS-Audio-Suite/main/example_workflows/Chatterbox SRT.jpg"
includes = []
